--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"antd": "^4.15.5",
 		"axios": "^0.21.0",
 		"loadable": "^1.0.0",
+		"pubsub-js": "^1.9.3",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-loadable": "^5.5.0",
