--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 		"web-vitals": "^0.2.4"
 	},
 	"scripts": {
-		"dev": "set browser=chrome& react-scripts start",
+		"dev": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
